# LevelEditor

./: .gitignore  README.md  base_objects.py  default.tmpl  leveleditor.py  main.py  placed_objects.py  play_objects.py  pygbag.ini  pyproject.toml  requirements.txt  start_objects.py  ui.py  utils.py
Levels/: level1.lvl  level2.lvl  level3.lvl  testing.lvl
levels/: demo.lvl  gauntlet.lvl  mind_over_matter.lvl  skyline_sprint.lvl  sticky_floor.lvl  tutorial.lvl
